--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "blog_app" "\0"
+            VALUE "FileDescription", "Shared Thoughts" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "blog_app" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "blog_app.exe" "\0"
-            VALUE "ProductName", "blog_app" "\0"
+            VALUE "OriginalFilename", "shared_thoughts.exe" "\0"
+            VALUE "ProductName", "Shared Thoughts" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
